mlton (20180207-0ppa5) xenial; urgency=low

  * Fix Homepage field in control (homepage-in-binary-package lintian)
  * Restore uniquifying short descriptions (duplicate-short-description lintian)
  * Add patch to not clean source documentation
  * Remove texlive-latex-base, asciidoc, dblatex, python-pygments,
    imagemagick, librsvg2-bin from Build-Depends to use documentation
    provided by upstream sources; in particular, network access isn't
    available with PPA build, which causes InclGitFile.py to fail
    when building guide

 -- Matthew Fluet <Matthew.Fluet@gmail.com>  Tue, 20 Feb 2018 06:31:09 -0500

mlton (20180207-0ppa4) xenial; urgency=low

  * Revert update Build-Depends for mlton-compiler and mlton-tools

 -- Matthew Fluet <Matthew.Fluet@gmail.com>  Tue, 20 Feb 2018 06:03:10 -0500

mlton (20180207-0ppa3) xenial; urgency=low

  * Update Build-Depends for mlton-compiler and mlton-tools to
    (<= 20130715-3), because PPA build is performed with PPA itself
    as a source; if a previous PPA build succeeded on some archs but
    failed on others, then it is impossible to rebuild the failed
    architectures using the PPA as a source

 -- Matthew Fluet <Matthew.Fluet@gmail.com>  Tue, 20 Feb 2018 05:37:54 -0500

mlton (20180207-0ppa2) xenial; urgency=low

  * Add pr-252-x86-updates patch (derived from upstream pull request
    252), which resolves `make check` errors on x86-linux

 -- Matthew Fluet <Matthew.Fluet@gmail.com>  Mon, 19 Feb 2018 20:51:12 -0500

mlton (20180207-0ppa1) xenial; urgency=low

  * New upstream release
  * Delete features-fix patch; applied upstream
  * Delete arm64 patch; applied upstream
  * Update package description
  * Remove unnecessary Build-Depends htmldoc
  * Replace Build-Depends ruby-albino with python-pygments
  * Update Replaces and Breaks with ${source:Version}
  * Update DEB_MAKE_BUILD_TARGET, DEB_MAKE_INSTALL_TARGET, and
    common-install-indep; many previous issues now addressed by